--- a/frontend/src/app/components/mail/mail.component.html
+++ b/frontend/src/app/components/mail/mail.component.html
@@ -18,7 +18,7 @@
         <label class = "usermail">MostafaM.Galal@pigeonon.com</label>
       </div>
       <button class = "settings-button" #settingsButton type = "button"><span class="material-symbols-outlined">settings</span></button>
-      <button class = "logout-button" #logoutButton type = "button"><span class="material-symbols-outlined">logout</span></button>
+      <button class = "logout-button" #logoutButton type = "button" (click)="logout()"><span class="material-symbols-outlined">logout</span></button>
     </div>
   </div>
   <div class="options">
