--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -19,8 +19,8 @@
                     <input type="text" id="username" formControlName="username"><br><br>
                 </div>
                 <div id="password" class="form-input">
-                    <label for="password">Password</label><br>
-                    <input type={{visibility}} id="password" formControlName="password"><br><br>
+                    <label for="enter_password">Password</label><br>
+                    <input type={{visibility}} id="enter_password" formControlName="enter_password"><br><br>
                 </div>
                 <div id="password" class="form-input">
                     <label for="confirm_password">Confirm</label><br>
