--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -18,14 +18,11 @@
                     <label for="username">Username</label><br>
                     <input type="text" id="username" formControlName="username"><br><br>
                 </div>
-                <div id="password" class="form-input">
-                    <label for="enter_password">Password</label><br>
-                    <input type={{visibility}} id="enter_password" formControlName="enter_password"><br><br>
+                <div id="ppassword" class="form-input">
+                    <label for="password">Password</label><br>
+                    <input type={{visibility}} id="password" formControlName="password"><br><br>
                 </div>
-                <div id="password" class="form-input">
-                    <label for="confirm_password">Confirm</label><br>
-                    <input type={{visibility}} id="confirm_password" formControlName="confirm_password"><br><br>
-                </div>
+                
                 <div class="show-password">
                     <label>
                         <input type="checkbox" (change)="togglePassword()">
