--- a/frontend/src/app/components/mail/folder-box/folder-box.component.html
+++ b/frontend/src/app/components/mail/folder-box/folder-box.component.html
@@ -3,10 +3,10 @@
         <span class="info-slabel"><label>New Folder</label></span>
         <button class="close-button" type = "button"><span class="material-symbols-outlined">refresh</span></button>
     </div>
-    <form [formGroup]="contactForm" (ngSubmit)="onSubmit($event)">
+    <form [formGroup]="folderForm" (ngSubmit)="onSubmit($event)">
         <div class="name-div">
-            <span class="name-slabel"><label for="name">Folder Name</label></span>
-            <span class="name-sinput"><input type="text" class="name" formControlName="name" id="name"></span>
+            <span class="name-slabel"><label for="folderName">Folder Name</label></span>
+            <span class="name-sinput"><input type="text" class="name" formControlName="folderName" id="folderName"></span>
         </div>
         <div class="form-submit">
             <input class="form-submit" type="submit" value="Create">
