--- a/frontend/src/app/components/mail/mail.component.html
+++ b/frontend/src/app/components/mail/mail.component.html
@@ -60,7 +60,16 @@
               <div class="fsublist-div">
                 <span class="material-symbols-outlined">folder</span>
                 <input type="button" class="button" value={{list}}>
-                <button class = "edit-button" #editButton type = "button"><span class="material-symbols-outlined">more_vert</span></button>
+                <button class = "edit-button"  #editButton (click)="show_edit_folder(i)"  type = "button"><span class="material-symbols-outlined">more_vert</span>
+                </button>
+                <div class="edit-dropdown" id="folder{{i}}"  >
+                  <div class="edit-content" id="edit{{i}}" >
+                    <a >edit</a>
+                    <a >remove</a>
+                  </div>
+                </div>
+                
+                
               </div>
             </li>
            </ul>
@@ -78,7 +87,13 @@
               <div class="fsublist-div" autofocus>
                 <span class="material-symbols-outlined">account_circle</span>
                 <input type="button" class="button" value={{list}}>
-                <button class = "edit-button" #editButton type = "button"><span class="material-symbols-outlined">more_vert</span></button>
+                <button class = "edit-button" #editButton (click)="show_edit_contact(i)" type = "button"><span class="material-symbols-outlined">more_vert</span></button>
+                <div class="contact-dropdown" id="folder-contact{{i}}"  >
+                  <div class="contact-content" id="edit-contact{{i}}" >
+                    <a >edit</a>
+                    <a >remove</a>
+                  </div>
+                </div>
               </div>
             </li>
            </ul>
