edit_remove the folders and contacts

--- a/frontend/src/app/components/mail/folder-box/folder-box.component.html
+++ b/frontend/src/app/components/mail/folder-box/folder-box.component.html
@@ -9,7 +9,7 @@
             <span class="name-sinput"><input type="text" class="name" formControlName="folderName" id="folderName"></span>
         </div>
         <div class="form-submit">
-            <input class="form-submit" type="submit" value="Create">
+            <input class="form-submit" id="ceate_edit" type="submit" value="Create">
         </div>
     </form>
 </div>
