--- a/frontend/src/app/components/mail/mail.component.html
+++ b/frontend/src/app/components/mail/mail.component.html
@@ -15,7 +15,7 @@
     <div class="main-buttons">
       <div class = "user-info">
         <button class = "state-button" #stateButton type = "button"><span class="material-symbols-outlined">radio_button_checked</span></button>
-        <label class = "usermail">MostafaM.Galal@pigeonon.com</label>
+        <label class = "usermail">{{currentUser}}@pigeonon.com</label>
       </div>
       <button class = "settings-button" #settingsButton type = "button"><span class="material-symbols-outlined">settings</span></button>
       <button class = "logout-button" #logoutButton type = "button" (click)="logout()"><span class="material-symbols-outlined">logout</span></button>
