--- a/frontend/src/app/components/mail/compose-box/compose-box.component.html
+++ b/frontend/src/app/components/mail/compose-box/compose-box.component.html
@@ -14,10 +14,10 @@
     <div class="attach">
         <select name="priority"  id="priority">
         <option selected disabled>choose priority</option>
-        <option value="4">Very High</option>
-        <option value="3">High</option>
-        <option value="2">Medium</option>
-        <option value="1">Low</option>
+        <option value=4>Very High</option>
+        <option value=3>High</option>
+        <option value=2>Medium</option>
+        <option value=1>Low</option>
         </select>
         <div >
         <input type="file" class="file"   multiple="multiple"  (change)="upload($event.target)">
