--- a/frontend/src/app/components/mail/mail.component.html
+++ b/frontend/src/app/components/mail/mail.component.html
@@ -133,7 +133,7 @@
           <br>
           <div>
             <h4>From: {{currentEmail.sender}}</h4>  
-            <h5>To: {{currentEmail.recievers}}</h5>
+            <h5>To: {{currentEmail.receivers}}</h5>
             <br>
             <p>{{currentEmail.body}}</p>
           </div>
@@ -172,7 +172,7 @@
               </td>
               <td>
                 <div class = "td-div" id = "table-recievers-div">
-                  {{email.value.recievers}} 
+                  {{email.value.receivers}} 
                 </div>
               </td>  
               <td>
