get emails from back

--- a/frontend/src/app/components/mail/mail.component.html
+++ b/frontend/src/app/components/mail/mail.component.html
@@ -29,19 +29,19 @@
         <span class="material-symbols-outlined">edit</span>
         <input type="button" class="button" value="Compose">
       </div>
-      <div class="options-div" (click)="getEmails('inbox')">
+      <div class="options-div" (click)="getEmails('Inbox')">
         <span class="material-symbols-outlined">inbox</span>
         <input type="button" class="button" value="Inbox">
       </div>
-      <div class="options-div" (click)="getEmails('sent')">
+      <div class="options-div" (click)="getEmails('Sent')">
         <span class="material-symbols-outlined">send</span>
         <input type="button" class="button" value="Sent">
       </div>
-      <div class="options-div" (click)="getEmails('draft')">
+      <div class="options-div" (click)="getEmails('Draft')">
         <span class="material-symbols-outlined">draft</span>
         <input type="button" class="button" value="Draft">
       </div>
-      <div class="options-div" (click)="getEmails('trash')">
+      <div class="options-div" (click)="getEmails('Trash')">
         <span class="material-symbols-outlined">delete</span>
         <input type="button" class="button" value="Trash">
       </div>
