--- a/frontend/src/app/components/signup/signup.component.css
+++ b/frontend/src/app/components/signup/signup.component.css
@@ -23,6 +23,11 @@
     box-shadow: 32px black;
 }
 
+.error-label{
+    color: red;
+    font-size: small!important;
+}
+
 .form-header{
     box-sizing: border-box;
     width: 100%;
@@ -105,8 +110,9 @@
 }
 
 #link{
-    font-size: 14px;
-    text-align: left;
+    position: absolute;
+    right: 0px;
+    font-size: 16px;
     color: var(--secondary);
     text-decoration: underline;
 }
@@ -126,9 +132,10 @@
 }
 
 .show-password{
+    position: relative;
     text-align: left;
-    margin: auto;
-    margin-left: 50px;
+    margin: auto 50px;
+    margin-right: 70px;
     color: var(--secondary);
 }
 
