edit and remove contact

--- a/frontend/src/app/components/mail/mail.component.html
+++ b/frontend/src/app/components/mail/mail.component.html
@@ -144,6 +144,9 @@
               <img src={{att}}>
             </a>
           </div>
+          <div id="attachments">
+            <label for = "attachment">Attachments:</label>
+          </div>
         </div>
       </div>
       <div class = "contact-preview" [ngStyle]="{'display' : contactVisible? 'block':'none'}">
