--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
                     <label id="link" (click)="signupRedirct()">Sign up</label>
                 </div>
                 <div class="form-submit">
-                    <input class="form-submit" type="submit" value="Submit">
+                    <input class="form-submit" type="submit" value="Login">
                 </div>
             </form>
         </div>
