--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -39,7 +39,7 @@
                     <label id="link" (click)="loginRedirct()">Log in</label>
                 </div>
                 <div class="form-submit">
-                    <input class="form-submit" type="submit" value="Submit">
+                    <input class="form-submit" type="submit" value="Signup">
                 </div>
             </form>
         </div>
